[package]
name = "milhouse"
version = "0.1.0"
description = "Persistent binary merkle tree"
edition = "2021"
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/sigp/milhouse"
documentation = "https://docs.rs/milhouse"
keywords = ["ethereum", "functional"]
categories = ["data-structures", "cryptography::cryptocurrencies", ]

[dependencies]
derivative = "2.2.0"
ethereum_hashing = "0.6.0"
ethereum_ssz = { git = "https://github.com/macladson/ethereum_ssz", branch = "stable-container" }
ethereum_ssz_derive = { git = "https://github.com/macladson/ethereum_ssz", branch = "stable-container" }
itertools = "0.10.3"
parking_lot = "0.12.1"
rayon = "1.5.1"
serde = { version = "1.0.0", features = ["derive"] }
tree_hash = { git = "https://github.com/macladson/tree_hash", branch = "stable-container" }
triomphe = "0.1.5"
typenum = "1.14.0"
vec_map = "0.8.2"
smallvec = "1.8.0"
arbitrary = { version = "1.2.3", features = ["derive"] }
ethereum-types = { version = "0.14.1", features = ["arbitrary"] }

[dev-dependencies]
ssz_types = { git = "https://github.com/macladson/ssz_types", branch = "stable-container" }
proptest = "1.0.0"
tree_hash_derive = { git = "https://github.com/macladson/tree_hash", branch = "stable-container" }
criterion = "0.5"

[features]
debug = []

[[bench]]
name = "rebase"
harness = false

[[bench]]
name = "tree_hash_root"
harness = false

[[bench]]
name = "ssz"
harness = false

[[bench]]
name = "pop_front"
harness = false
